--- a/include/shmem/depr.h.in
+++ b/include/shmem/depr.h.in
@@ -17,8 +17,8 @@
  */
 #if defined(__clang__)
 
-# define _DEPRECATED_BY(...)                                        \
-    __attribute__((deprecated("use '" #__VA_ARGS__ "' instead")))
+# define _DEPRECATED_BY(...)                                    \
+    __attribute__((deprecated("use " #__VA_ARGS__ " instead")))
 # define _DEPRECATED                            \
     __attribute__((deprecated))
 
@@ -37,10 +37,10 @@
 /* GCC has extended attribute syntax from 4.5 onward */
 
 # if (__GNUC__ >= 5) || (__GNUC__ == 4 && __GNUC_MINOR__ >= 5)
-#  define _DEPRECATED_BY(...)                                       \
-    __attribute__((deprecated("use '" #__VA_ARGS__ "' instead")))
+#  define _DEPRECATED_BY(...)                                   \
+    __attribute__((deprecated("use " #__VA_ARGS__ " instead")))
 # else
-#  define _DEPRECATED_BY(...)                    \
+#  define _DEPRECATED_BY(...)                   \
     _DEPRECATED
 # endif
 
