--- a/include/shmem/api.h.in
+++ b/include/shmem/api.h.in
@@ -159,7 +159,7 @@ extern "C"
      * @return None.
      *
      */
-    void shmem_global_exit(int status);
+    SHMEM_NORETURN void shmem_global_exit(int status);
 
     /**
      * @brief returns the "rank" or identity of the calling PE
