Removed C++ compiler checks during testing, restore.

--- a/configure.ac
+++ b/configure.ac
@@ -28,10 +28,11 @@ AM_SILENT_RULES([yes])
 # C/C++
 AC_PROG_CC_C99
 AC_PROG_CC_C_O
-# AC_PROG_CXX
-# AC_PROG_CXX_C_O
-# AC_PROG_CXXCPP
 AC_PROG_INSTALL
+
+AC_PROG_CXX
+AC_PROG_CXX_C_O
+AC_PROG_CXXCPP
 
 # Fortran-specific checks
 AC_PROG_FC
