--- a/configure.ac
+++ b/configure.ac
@@ -118,7 +118,8 @@ AC_CONFIG_FILES([include/Makefile
 		 include/shmem/api.h
 		 include/shmem.h
 		 include/pshmem.h include/pshmemx.h
-		 include/shmemx.h include/null-shmemx.h
+		 include/shmemx.h
+		 include/null-shmemx.h include/null-shmemx.fh
 		 include/shmem/defs.fh
 		 include/shmem.fh include/pshmem.fh
 		 include/shmemx.fh include/pshmemx.fh
