--- a/include/shmem/api.h.in
+++ b/include/shmem/api.h.in
@@ -468,6 +468,12 @@ extern "C"
     void shmem_ctx_##_opname##_size(shmem_ctx_t ctx,                    \
                                     void *dest, const void *src,        \
                                     size_t nelems, int pe);             \
+    /* see \ref shmem_ctx_long_i##_opname() */                          \
+    void shmem_ctx_i##_opname##_size(shmem_ctx_t ctx,                   \
+                                     void *dest,                        \
+                                     const void *src,                   \
+                                     ptrdiff_t tst, ptrdiff_t sst,      \
+                                     size_t nelems, int pe);            \
     /* see \ref shmem_ctx_long_##_opname() */                           \
     void shmem_ctx_##_opname##_size##_nbi(shmem_ctx_t ctx,              \
                                           void *dest, const void *src,  \
@@ -494,6 +500,14 @@ extern "C"
     {                                                                   \
         shmem_ctx_##_opname##_size(SHMEM_CTX_DEFAULT,                   \
                                    dest, src, nelems, pe);              \
+    }                                                                   \
+    inline static void                                                  \
+    shmem_i##_opname##_size(void *dest, const void *src,                \
+                            ptrdiff_t tst, ptrdiff_t sst,               \
+                            size_t nelems, int pe)                      \
+    {                                                                   \
+        shmem_ctx_i##_opname##_size(SHMEM_CTX_DEFAULT,                  \
+                                    dest, src, tst, sst, nelems, pe);   \
     }                                                                   \
     inline static void                                                  \
     shmem_##_opname##_size##_nbi(void *dest, const void *src,           \
