Can't indent make conditionals, thinks they're missing rule separators

--- a/configure.ac
+++ b/configure.ac
@@ -118,11 +118,13 @@ AC_CONFIG_FILES([include/Makefile
 		 include/shmem/api.h
 		 include/shmem.h
 		 include/pshmem.h include/pshmemx.h
-		 include/shmemx.h
-		 include/null-shmemx.h include/null-shmemx.fh
+		 include/shmemx.h include/null-shmemx.h
+		])
+
+AC_CONFIG_FILES([include/shmemx.fh include/null-shmemx.fh
 		 include/shmem/defs.fh
 		 include/shmem.fh include/pshmem.fh
-		 include/shmemx.fh include/pshmemx.fh
+		 include/pshmemx.fh
 		])
 
 AC_CONFIG_FILES([pkgconfig/Makefile
