--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -11,30 +11,16 @@ SHMEM_HDRS             =  shmem/defs.h \
 #
 # deprecated locations of files from earlier specs.  Always required.
 #
-SHMEM_HDRS            += mpp/shmem.h mpp/shmemx.h mpp/shmemx.fh
+SHMEM_HDRS             += mpp/shmem.h mpp/shmemx.h
 
 
 #
 # must install if fortran requested
 #
 if ENABLE_FORTRAN
-SHMEM_HDRS            += shmem/defs.fh shmem.fh mpp/shmem.fh
+SHMEM_HDRS             += shmem/defs.fh shmem.fh
+SHMEM_HDRS             += mpp/shmem.fh mpp/shmemx.fh
 endif # fortran
-
-
-
-#
-# need presence of shmemx header file whether features requested or not.
-# Also add fortran one if enabled.
-#
-if ENABLE_EXPERIMENTAL
-SHMEMX_HEADER          = shmemx.h
-SHMEMX_HEADER_F        = shmemx.fh
-else
-SHMEMX_HEADER          = null-shmemx.h
-SHMEMX_HEADER_F        = null-shmemx.fh
-endif # experimental
-
 
 
 #
@@ -42,13 +28,12 @@ endif # experimental
 #
 if ENABLE_EXPERIMENTAL
 
-if ENABLE_FORTRAN
-SHMEM_HDRS            += shmemx.fh
-
 if ENABLE_PSHMEM
-SHMEM_HDRS            += pshmemx.h
+SHMEM_HDRS             += pshmemx.h
 endif # pshmem
 
+if ENABLE_FORTRAN
+SHMEM_HDRS             += pshmemx.fh
 endif # fortran
 
 endif # experimental
@@ -59,18 +44,30 @@ endif # experimental
 # add profiling interface if requested
 #
 if ENABLE_PSHMEM
-SHMEM_HDRS            += pshmem.h
+SHMEM_HDRS             += pshmem.h
 
 if ENABLE_FORTRAN
-SHMEM_HDRS            += pshmem.fh
+SHMEM_HDRS             += pshmem.fh
 endif # fortran
 
 endif # pshmem
 
 
+#
+# need presence of shmemx header file whether features requested or not.
+# Also add fortran one if enabled.
+#
+if ENABLE_EXPERIMENTAL
+SHMEMX_HEADER           = shmemx.h
+SHMEMX_HEADER_F         = shmemx.fh
+else
+SHMEMX_HEADER           = null-shmemx.h
+SHMEMX_HEADER_F         = null-shmemx.fh
+endif # experimental
+
 
 # retain tree
-nobase_include_HEADERS = $(SHMEM_HDRS)
+nobase_include_HEADERS  = $(SHMEM_HDRS)
 
 install-data-hook:
 	cp -p $(SHMEMX_HEADER) $(includedir)/shmemx.h
